tests/samples/negative/types/noncopy_option_ok_or_error.ax
module noncopy_option_ok_or_error;

import std.core.result;

noncopy struct Owner {
    value: i32;
}

fn make_owner() -> Owner {
    return Owner { value: 1 };
}

fn main() -> i32 {
    var option: Option<i32> = Option.none;
    var err: Owner = make_owner();
    let converted: Result<i32, Owner> = option.ok_or(move(err));
    return 0;
}
